--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <header>
             <h1> The Empire Sucks </h1>
+            <script src="app1.js"></script>
             <nav>
                 <button> home </button>
                 <button> why we fight </button>
