--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <body>
         <header>
             <h1> The Empire Sucks </h1>
-            <script src="app1.js"></script>
             <nav>
                 <button> home </button>
                 <button> why we fight </button>
@@ -16,6 +15,10 @@
             </nav>
         </header>
         <main>
+           <section>
+               <script src="app1.js"></script>
+           </section>
+           
             <section class="disclaimer">
                 <h2> Disclaimer: </h2>
                 <p class="dis">We are an anti-imperial organization.</p>
